--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.DicodingC22056_Capstone_Project"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".Homepage.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
