--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.DicodingC22056_Capstone_Project"
         tools:targetApi="31">
         <activity
+            android:name=".NewsPage.NewsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HospitalPage.provinceList.ProvinceListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CovUpdate.CovidUpdateActivity"
+            android:exported="false" />
+        <activity
             android:name=".Homepage.MainActivity"
             android:exported="true">
             <intent-filter>
