--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.dicoding_c22_056_capstone_project">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +15,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DicodingC22056_Capstone_Project"
         tools:targetApi="31">
+        <activity
+            android:name=".HospitalPage.HospitalList.NonCovidHospitalList.NonCovidHospitalActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HospitalPage.HospitalList.CovidHospitalList.CovidHospitalActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HospitalPage.HospitalList.HospitalListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HospitalPage.City.CityListActivity"
+            android:exported="false" />
         <activity
             android:name=".NewsPage.NewsActivity"
             android:exported="false" />
