--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,22 @@
         android:theme="@style/Theme.DicodingC22056_Capstone_Project"
         tools:targetApi="31">
         <activity
-            android:name=".HospitalPage.HospitalList.DetailHospital.DetailHospitalActivity"
+            android:name=".NewsPage.news.HoaxActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NewsPage.NewsPageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HospitalPage.HospitalList.DetailHospital.BedList.BedListDetail.BedListDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HospitalPage.HospitalList.DetailHospital.BedList.CovBedListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HospitalPage.HospitalList.DetailHospital.NonCovid.NonCovidDetailHospitalActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HospitalPage.HospitalList.DetailHospital.Covid.CovidDetailHospitalActivity"
             android:exported="false" />
         <activity
             android:name=".HospitalPage.HospitalList.NonCovidHospitalList.NonCovidHospitalActivity"
@@ -31,7 +46,7 @@
             android:name=".HospitalPage.City.CityListActivity"
             android:exported="false" />
         <activity
-            android:name=".NewsPage.NewsActivity"
+            android:name=".NewsPage.news.NewsActivity"
             android:exported="false" />
         <activity
             android:name=".HospitalPage.provinceList.ProvinceListActivity"
